# EShop

Backend/eshop-api/: .env  Cargo.toml  diesel.toml  ecommerce.db
Backend/eshop-api/migrations/2024-08-28-151016_create_categories/: up.sql
Backend/eshop-api/migrations/2024-08-28-151016_create_orders/: up.sql
Backend/eshop-api/migrations/2024-08-28-151016_create_products/: up.sql
Backend/eshop-api/migrations/2024-08-28-151016_create_users/: up.sql
Backend/eshop-api/src/: handlers.rs  models.rs  schema.rs
