[package]
name = "eshop-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15"
jsonwebtoken = "7.2"
bcrypt = "0.10"
utoipa = { version = "2.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "2.0", features = ["actix-web"] }
env_logger = "0.10"
log = "0.4"